# hypersets-rust-api

./: .env  Cargo.toml  README.md
migrations/: 20240611151817_test_api.sql  20240623123031_update_one.sql  20240623150620_remove_numeric.sql  20240623151538_back_numeric.sql  20240623153143_back_int_2.sql
src/: config.rs  error.rs  lib.rs  main.rs  router.rs  utils.rs
src/entities/: mod.rs
src/entities/comments/: database_object.rs  mod.rs
src/entities/downloads/: database_object.rs
src/entities/presets/: entity.rs  mod.rs
