[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
  "chrono",
  "bigdecimal",
  "macros",
  "ipnetwork",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
serde = "1.0.203"
serde_json = "1.0.117"
clap = { version = "4.5.7", features = ["derive", "env"] }
env_logger = "0.11.3"
anyhow = "1.0.86"
thiserror = "1.0.61"
tower = { version = "*", features = ["full"] }
bigdecimal = { version = "0.4", features = ["serde-json", "serde"] }
strum = "0.26"
strum_macros = "0.26"

[dependencies.uuid]
version = "1.8.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]
